Added value and weight to item creation.

--- a/developer/changelogs/0.5
+++ b/developer/changelogs/0.5
@@ -2,3 +2,7 @@
 -Added changelog and notes pages to the developer notes menu
 -Added the functions to display the notes ^
 -Added read file functionality to devnotes
+-Added weight property to item creation
+-Added value property to item creation
+
+-Begun filing in icons (16x16)
